LXC/pwe-chart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - pwe.kube.freebox.cz
      secretName: secret
  rules:
    - host: pwe.kube.freebox.cz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: http
                port:
                  number: 80
